--- a/src/scss/templeates/_header.scss
+++ b/src/scss/templeates/_header.scss
@@ -18,7 +18,17 @@
 }
 
 .redes {
-    margin: 2rem 0;
+    margin: 3rem 0;
+    @include m.tablet {
+        margin: 0;
+    }
+    &__icono {
+        &::before {
+            content: '';
+            display: inline-block;
+            padding: 2rem;
+        }
+    }
 }
 
 .barra {
