--- a/src/scss/templeates/_horario.scss
+++ b/src/scss/templeates/_horario.scss
@@ -1,15 +1,59 @@
 @use '../base/variables' as v;
 @use '../base/mixins' as m;
-.horarios {
-    &__grid {
-        background-image: linear-gradient();
+.horario {
+    background-image: linear-gradient(to bottom, v.$primario 0%, v.$primario 50%, transparent 50%, transparent 100%), url(../img/bg_horarios.jpg);
+    background-repeat: no-repeat;
+    background-position: center, bottom center;
+    color: v.$blanco;
+    @include m.tablet {
+        background-image: linear-gradient(to right, v.$primario 0%, v.$primario 50%, transparent 50%, transparent 100%), url(../img/bg_horarios.jpg);
+        background-position: center, top right;
     }
-    &__contenido {}
+    &__grid {
+        display: grid;
+        grid-template-rows: repeat(2, 1fr);
+        @include m.tablet {
+            grid-template-rows: unset;
+            grid-template-columns: repeat(2, 1fr);
+        }
+    }
+    &__contenido {
+        padding: 3rem 1rem;
+    }
     &__heading {
-        color: v.$gris;
-        font-weight: 100;
+        text-align: center;
+        font-weight: 700;
+        text-transform: uppercase;
+        @include m.tablet {
+            text-align: left;
+        }
     }
     &__descripcion {
         text-align: justify;
+    }
+    &__tabla {
+        margin-top: 3rem;
+        width: 100%;
+        border: .5rem solid v.$secundario;
+        text-align: center;
+        border-collapse: collapse;
+        thead {
+            background-color: v.$secundario;
+            th {
+                padding: 1.5rem 0;
+                font-size: 2.5rem;
+            }
+        }
+        tbody {
+            tr {
+                &:hover {
+                    background-color: darken($color: v.$primario, $amount: 20);
+                }
+            }
+            td {
+                padding: 1rem 0;
+                font-size: 2rem;
+            }
+        }
     }
 }
