--- a/src/scss/templeates/_cita.scss
+++ b/src/scss/templeates/_cita.scss
@@ -5,6 +5,7 @@
     background-size: cover;
     background-attachment: fixed;
     background-position: center center;
+    margin: 3rem auto;
     &__contenido {
         color: v.$blanco;
         padding: 3rem;
