--- a/src/scss/templeates/_productos.scss
+++ b/src/scss/templeates/_productos.scss
@@ -14,6 +14,7 @@
         scroll-snap-type: x mandatory;
         @include m.telefono {
             grid-template-columns: repeat(2, 1fr);
+            row-gap: 3rem;
             overflow-x: hidden;
         }
         @include m.tablet {
