--- a/src/scss/templeates/_slide.scss
+++ b/src/scss/templeates/_slide.scss
@@ -1,5 +1,12 @@
 @use 'base/variables' as v;
 @use 'base/mixins' as m;
 .slider {
-    background-color: red;
+    overflow: hidden;
+    &__slide {
+        height: 100%;
+        flex-shrink: 0;
+        width: 100%;
+        position: relative;
+        transition-property: transform;
+    }
 }
