--- a/src/scss/templeates/_slide.scss
+++ b/src/scss/templeates/_slide.scss
@@ -2,11 +2,17 @@
 @use 'base/mixins' as m;
 .slider {
     overflow: hidden;
+    position: relative;
+    margin-top: 3rem;
     &__slide {
         height: 100%;
         flex-shrink: 0;
         width: 100%;
         position: relative;
         transition-property: transform;
+    }
+    &__paginacion {
+        text-align: center;
+        padding: .5rem 0;
     }
 }
